--- a/Toolshed.Sql/Toolshed.Sql.csproj
+++ b/Toolshed.Sql/Toolshed.Sql.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>net9.0</TargetFramework>
+		<Version>9.0.0</Version>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<RepositoryUrl>https://github.com/tbasallo/toolshed</RepositoryUrl>
