--- a/Toolshed.Sql/Toolshed.Sql.csproj
+++ b/Toolshed.Sql/Toolshed.Sql.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
 	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
-		<Version>9.0.2</Version>
+		<TargetFramework>net10.0</TargetFramework>
+		<Version>10.0</Version>
+		<FileVersion>10.0</FileVersion>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<RepositoryUrl>https://github.com/tbasallo/toolshed</RepositoryUrl>
@@ -11,11 +11,9 @@
 		<Authors>Tony Basallo</Authors>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	</PropertyGroup>
-
 	<ItemGroup>
-		<PackageReference Include="Toolshed" Version="9.2.2" />
+		<PackageReference Include="Toolshed" Version="10.0.0" />
 		<PackageReference Include="FastMember" Version="1.5.0" />
-		<PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
+		<PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.3" />
 	</ItemGroup>
-
 </Project>
